Fix, message not showing because Button image is over the text

--- a/public/style.css
+++ b/public/style.css
@@ -295,7 +295,7 @@ html { overflow-y: hidden; }
   height: 100%;
   border: none;
   color: white;
-  padding: 0px 20px; 
+  padding: 0px 50px; 
   border-radius: 10px;
 
 }
